package Server.Playables;

public abstract class Effect {

    public int getMoreDamage(){ return 0; }

    public int getLessCost() { return 0; }

    public int getMoreStars() { return 0; }

    public int starsWhenAttacking() { return 0; }

    public int getArmor(){ return 0; }
}
